# aana_app_template

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: rename_project.sh
aana_app/: app.py
aana_app_project/: app.py  deployments.py  endpoints.py
aana_app_project/configs/: settings.py
aana_app_project/core/prompts/: loader.py
