[tool.poetry]
name = "aana_app"
version = "0.1.0"
description = "project_description"
url="https://github.com/author_name/project_urlname/"
authors = ["project_author"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aana = ">=0.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
